Name:                wai-middleware-headers
Version:             0.1
Synopsis:            Cors and Add Headers for WAI
Homepage:            http://github.com/seanhess/wai-middleware-headers
License:             BSD3
License-file:        LICENSE
Author:              Sean Hess
Maintainer:          seanhess@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Network.Wai.Middleware.Headers
  Build-depends:       base >= 3 && < 5, wai, bytestring, http-types
  
